ext-base-debug on debug mode

--- a/root/site/top.html
+++ b/root/site/top.html
@@ -24,7 +24,7 @@
 
     <script type="text/javascript" src="/site/stacktrace.js"></script>
 
-    <script type="text/javascript" src="/static/ext/adapter/ext/ext-base.js"></script>
+    <script type="text/javascript" src="/static/ext/adapter/ext/ext-base<% $debug %>.js"></script>
     <script type="text/javascript" src="/static/ext/ext-all<% $debug %>.js"></script>
     <!-- script type="text/javascript" src="/static/ext/jitx<% $debug %>.js"></script -->
 
