style check_sm, final.css, status_type, and cleanup

--- a/root/site/top.html
+++ b/root/site/top.html
@@ -32,6 +32,8 @@
     <script type="text/javascript" src="/static/ext/src/locale/ext-lang-es.js"></script>
 
     <link rel="stylesheet" type="text/css" href="/static/ext/docs/resources/docs.css" />
+
+    <!-- site is the global stylesheet -->
     <link rel="stylesheet" type="text/css" href="/static/site.css" />
 
 % if( my $theme_dir = $c->stash->{theme_dir} ) {
