--- a/root/site/header.html
+++ b/root/site/header.html
@@ -106,6 +106,9 @@
     <link rel='stylesheet' type='text/css' href='/static/fullcalendar/fullcalendar.print.css' media='print' />
     <script type='text/javascript' src='/static/fullcalendar/fullcalendar.min.js'></script>
     
+    <!-- final css override -->
+    <link rel="stylesheet" type="text/css" href="/static/final.css" />
+
     <!-- Hooks -->
 % for my $include ( _array $c->stash->{header_include} ) {
     <!-- BEGIN <% $include->{name} %> -->
