--- a/root/dashlets/baselines.html
+++ b/root/dashlets/baselines.html
@@ -10,6 +10,8 @@ html: /dashlets/baselines.html
 <%perl>
     use Baseliner::Utils;
     my @entornos = $c->stash->{entornos};
+    my $dashboard_id = $c->stash->{dashboard_id};
+    my $projects = $c->stash->{projects};
 </%perl>
 
     <div>
@@ -17,13 +19,13 @@ html: /dashlets/baselines.html
 %foreach my $entorno (_array @entornos){
         <h4><%$entorno->{bl}%></h4>
         <div class="progress progress-success" style="margin-bottom: 5px;">
-            <div class="bar" style="width: <%$entorno->{porcentOk}%>%" onmouseover="this.style.cursor='pointer'" onClick="javascript:Baseliner.addNewTabComp('/dashboard/viewjobs?ent=<%$entorno->{bl}%>&swOk=1', _('<%$entorno->{bl}%> - <%$entorno->{totOk}%>/<%$entorno->{total}%> OK'));"><%$entorno->{totOk}%></div>
+            <div class="bar" style="width: <%$entorno->{porcentOk}%>%" onmouseover="this.style.cursor='pointer'" onClick="javascript:Baseliner.addNewTabComp('/dashboard/viewjobs/<%$dashboard_id%>/<%$projects%>/ok/<%$entorno->{bl}%>', _('<%$entorno->{bl}%> - <%$entorno->{totOk}%>/<%$entorno->{total}%> OK'));"><%$entorno->{totOk}%></div>
         </div>
         <div class="progress progress-danger" style="margin-bottom: 5px;">
-            <div class="bar" style="width: <%$entorno->{porcentError}%>%" onmouseover="this.style.cursor='pointer'" onClick="javascript:Baseliner.addNewTabComp('/dashboard/viewjobs?ent=<%$entorno->{bl}%>&swOk=0', _('<%$entorno->{bl}%> - <%$entorno->{totError}%>/<%$entorno->{total}%> ERROR'));"><%$entorno->{totError}%></div>
+            <div class="bar" style="width: <%$entorno->{porcentError}%>%" onmouseover="this.style.cursor='pointer'" onClick="javascript:Baseliner.addNewTabComp('/dashboard/viewjobs/<%$dashboard_id%>/<%$projects%>/nook/<%$entorno->{bl}%>', _('<%$entorno->{bl}%> - <%$entorno->{totError}%>/<%$entorno->{total}%> ERROR'));"><%$entorno->{totError}%></div>
         </div>
 %}
-        <div style="text-align:right;"><b><a href="javascript:Baseliner.addNewTabComp('/dashboard/viewjobs?ent=All', _('Running jobs'));">Ver en ejecución</a></b></div>
+        <div style="text-align:right;"><b><a href="javascript:Baseliner.addNewTabComp('/dashboard/viewjobs/<%$dashboard_id%>/<%$projects%>', _('Running jobs'));">Ver en ejecución</a></b></div>
     </div>
 
 
