--- a/root/comp/topic/topic_msg.html
+++ b/root/comp/topic/topic_msg.html
@@ -282,12 +282,16 @@ padding: 2px 4px 2px 7px;
                       </li>
                     </ul>
                     <ul class="" style="margin-left: 20px">
-                      <li class="">
 % foreach my $topic ( _array( $topics ) ) {
-                      <li style="margin: 6px 0px 6px 0px">
+        
+                      <li style="margin: 6px 0px 6px 0px;">
                           <span class="label" onclick="javascript:Baseliner.show_topic(<% $topic->{mid} %>, '<% $topic->{name} %>')" 
                             style="float:left;padding:2px 8px 2px 8px;cursor:pointer;background: <% $topic->{color} %>"><% $topic->{name} %></span>
-                            &nbsp;&nbsp;<b><% $topic->{title} %></b>
+% my $cls = ( $topic->{progress} < 20 ? 'important' : ( $topic->{progress} < 40 ? 'warning' : ( $topic->{progress} < 80 ? 'info' : 'success' ) ) );
+                            &nbsp;&nbsp;<b><% $topic->{title} %></b>&nbsp;&nbsp;
+% if($topic->{progress}){                            
+                            <span class="badge badge-<%$cls%>"><%$topic->{progress}%>%</span>
+%}
                       </li>
 % }
                     </ul>
@@ -305,7 +309,11 @@ padding: 2px 4px 2px 7px;
                       <li style="margin: 6px 0px 6px 0px">
                           <span class="label" onclick="javascript:Baseliner.show_topic(<% $topic->{mid} %>, '<% $topic->{name} %>')" 
                             style="float:left;padding:2px 8px 2px 8px;cursor:pointer;background: <% $topic->{color} %>"><% $topic->{name} %></span>
-                            &nbsp;&nbsp;<b><% $topic->{title} %></b>
+% my $cls = ( $topic->{progress} < 20 ? 'important' : ( $topic->{progress} < 40 ? 'warning' : ( $topic->{progress} < 80 ? 'info' : 'success' ) ) );
+                            &nbsp;&nbsp;<b><% $topic->{title} %></b>&nbsp;&nbsp;
+% if($topic->{progress}){
+                            <span class="badge badge-<%$cls%>"><%$topic->{progress}%>%</span>
+%}
                       </li>
 % }
                     </ul>
