--- a/root/site/top.html
+++ b/root/site/top.html
@@ -51,5 +51,6 @@
     <style type="text/css">
     </style>
 
+    <script type="text/javascript" src="/i18n/js"></script>
     <script type="text/javascript" src="/site/globals.js"></script>
     <script type="text/javascript" src="/site/common.js"></script>
