--- a/root/static/codemirror/mode/markdown/index.html
+++ b/root/static/codemirror/mode/markdown/index.html
@@ -14,7 +14,7 @@
 
 <!-- source: http://daringfireball.net/projects/markdown/basics.text -->
 <form><textarea id="code" name="code">
-Markdown: Basics
+arkdown: Basics
 ================
 
 &lt;ul id="ProjectSubmenu"&gt;
@@ -56,7 +56,7 @@ a blank line -- a line containing nothing but spaces or tabs is
 considered blank.) Normal paragraphs should not be indented with
 spaces or tabs.
 
-Markdown offers two styles of headers: *Setext* and *atx*.
+arkdown offers two styles of headers: *Setext* and *atx*.
 Setext-style headers for `&lt;h1&gt;` and `&lt;h2&gt;` are created by
 "underlining" with equal signs (`=`) and hyphens (`-`), respectively.
 To create an atx-style header, you put 1-6 hash marks (`#`) at the
@@ -65,7 +65,7 @@ HTML header level.
 
 Blockquotes are indicated using email-style '`&gt;`' angle brackets.
 
-Markdown:
+arkdown:
 
     A First Level Header
     ====================
@@ -116,9 +116,9 @@ Output:
 
 ### Phrase Emphasis ###
 
-Markdown uses asterisks and underscores to indicate spans of emphasis.
+arkdown uses asterisks and underscores to indicate spans of emphasis.
 
-Markdown:
+arkdown:
 
     Some of these words *are emphasized*.
     Some of these words _are emphasized also_.
@@ -203,7 +203,7 @@ Output:
 
 ### Links ###
 
-Markdown supports two styles for creating links: *inline* and
+arkdown supports two styles for creating links: *inline* and
 *reference*. With both styles, you use square brackets to delimit the
 text you want to turn into a link.
 
@@ -303,7 +303,7 @@ To specify an entire block of pre-formatted code, indent every line of
 the block by 4 spaces or 1 tab. Just like with code spans, `&amp;`, `&lt;`,
 and `&gt;` characters will be escaped automatically.
 
-Markdown:
+arkdown:
 
     If you want your page to validate under XHTML 1.0 Strict,
     you've got to put paragraph tags in your blockquotes:
