--- a/root/static/shjs/index.html
+++ b/root/static/shjs/index.html
@@ -61,8 +61,8 @@ LaTeX<br>
 LDAP files<br>
 Log files<br>
 LSM (Linux Software Map) files<br>
-M4<br>
-Makefile<br>
+4<br>
+akefile<br>
 Objective Caml<br>
 Oracle SQL<br>
 Pascal<br>
