codemirror version bump

--- a/root/static/codemirror/mode/smalltalk/index.html
+++ b/root/static/codemirror/mode/smalltalk/index.html
@@ -36,7 +36,7 @@ Seaside.WAComponent subclass: #MyCounter [
     ]
 ]
 
-yCounter registerAsApplication: 'mycounter'
+MyCounter registerAsApplication: 'mycounter'
 </textarea></form>
 
     <script>
