--- a/root/static/codemirror/demo/vim.html
+++ b/root/static/codemirror/demo/vim.html
@@ -6,7 +6,9 @@
     <script src="../lib/codemirror.js"></script>
     <script src="../mode/clike/clike.js"></script>
     <script src="../keymap/vim.js"></script>
+    <script src="../lib/util/dialog.js"></script>
     <link rel="stylesheet" href="../doc/docs.css">
+    <link rel="stylesheet" href="../lib/util/dialog.css">
 
     <style type="text/css">
       .CodeMirror {border-top: 1px solid #eee; border-bottom: 1px solid #eee;}
@@ -38,8 +40,8 @@ CodeMirror's internal API is quite different from Vim, they are only
 a loose approximation of actual vim bindings, though.</p>
 
     <script>
-      CodeMirror.commands.save = function(){alert("Saving");};
-      CodeMirror.fromTextArea(document.getElementById("code"), {
+      CodeMirror.commands.save = function(){ alert("Saving"); };
+      var editor = CodeMirror.fromTextArea(document.getElementById("code"), {
         lineNumbers: true,
         mode: "text/x-csrc",
         keyMap: "vim"
