--- a/root/site/top.html
+++ b/root/site/top.html
@@ -12,10 +12,22 @@
     <link rel="shortcut icon" href="<% $favicon %>" mce_href="<% $favicon %>"/>
 % }
 
+
+
+    <!-- Loading masks -->                                            
+    <div id="bali-loading-mask" style="position:absolute; left:0; top:0; width:100%; height:100%; z-index:20000; background-color:white;"></div>
+    <div id="bali-loading" style="position:absolute; left:45%; top:40%; padding:2px; z-index:20001; height:auto;">
+      <center>
+      <img style="" src="/static/images/loading.gif" />
+      <div style="text-transform: uppercase; font-weight: normal; font-size: 11px; color: #999; font-family: Calibri, Tahoma, Helvetica Neue, Helvetica, Arial, sans-serif;">
+          <% _loc('Loading') %>
+      </div>
+      </center>
+    </div>
+
     <!--JQuery -->
     <script type="text/javascript" src="/static/jquery/jquery-1.7.1.min.js"></script>
     <!--JQuery draggable plugin, etc -->
-    <script type="text/javascript" src="/static/jquery/jquery-ui-1.8.17.custom.min.js"></script>
     
     <!-- ExtJS -->
     <script type="text/javascript" src="/static/ext/adapter/jquery/ext-jquery-adapter<% $debug %>.js"></script>
@@ -39,11 +51,6 @@
 % if( my $theme_dir = $c->stash->{theme_dir} ) {
     <link rel="stylesheet" type="text/css" href="/static<% $theme_dir %>/style.css" />
 % }
-
-    <div id="loading-mask"></div>
-    <div id="loading">
-      <div class="loading-indicator"><img src="/static/gui/icons/loading-balls.gif" style="margin-right:8px;" align="absmiddle"/><% _loc('Loading...') %></div>
-    </div>
 
     <!--script type="text/javascript" src="/static/ext/air/ext-air.js"></script-->
     <!-- link rel="stylesheet" type="text/css" href="/static/ext/air/resources/ext-air.css" /-->
