--- a/root/site/top.html
+++ b/root/site/top.html
@@ -15,11 +15,11 @@
 
 
     <!-- Loading masks -->                                            
-    <div id="bali-loading-mask" style="position:absolute; left:0; top:0; width:100%; height:100%; z-index:20000; background-color:white;"></div>
-    <div id="bali-loading" style="position:absolute; left:45%; top:40%; padding:2px; z-index:20001; height:auto;">
+    <div id="xbali-loading-mask" style="position:absolute; left:0; top:0; width:100%; height:100%; z-index:20000; background-color:white;"></div>
+    <div id="xbali-loading" style="position:absolute; left:45%; top:40%; padding:2px; z-index:20001; height:auto;">
       <center>
       <img style="" src="/static/images/loading.gif" />
-      <div style="text-transform: uppercase; font-weight: normal; font-size: 11px; color: #999; font-family: Calibri, Tahoma, Helvetica Neue, Helvetica, Arial, sans-serif;">
+      <div style="text-transform: uppercase; font-weight: normal; font-size: 10px; color: #999; font-family: Open Sans, Calibri, Tahoma, Helvetica Neue, Helvetica, Arial, sans-serif;">
           <% _loc('Loading') %>
       </div>
       </center>
