--- a/root/site/header.html
+++ b/root/site/header.html
@@ -8,7 +8,6 @@
     <script type="text/javascript" src="/site/help.js"></script>
     <script type="text/javascript" src="/site/runner.js"></script>
     <script type="text/javascript" src="/comp/topic/topic_lib.js"></script>
-    <script type="text/javascript" src="/comp/lib/main.js"></script>
     <script type="text/javascript" src="/site/panelresizer.js"></script>
     <script type="text/javascript" src="/static/livegrid/livegrid-all.js"></script>
 
@@ -32,7 +31,12 @@
     <script type="text/javascript" src="/static/codemirror/lib/util/simple-hint.js"></script>
     <script type="text/javascript" src="/static/codemirror/mode/perl/perl.js"></script>
     <script type="text/javascript" src="/static/codemirror/mode/javascript/javascript.js"></script>
-    <style type="text/css">.CodeMirror {border: 1px solid #eee;} .CodeMirror-scroll { height: 100% }
+    <style type="text/css">
+        .CodeMirror { border: 1px solid #eee;} 
+        .CodeMirror-scroll {
+            overflow: visible;
+            height: 100%;
+        }
         .CodeMirror-fullscreen {
             display: block;
             position: absolute;
