jquery ui missing

--- a/root/site/top.html
+++ b/root/site/top.html
@@ -28,6 +28,7 @@
     <!--JQuery -->
     <script type="text/javascript" src="/static/jquery/jquery-1.7.1.min.js"></script>
     <!--JQuery draggable plugin, etc -->
+    <script type="text/javascript" src="/static/jquery/jquery-ui-1.8.17.custom.min.js"></script>
     
     <!-- ExtJS -->
     <script type="text/javascript" src="/static/ext/adapter/jquery/ext-jquery-adapter<% $debug %>.js"></script>
