--- a/features/changeman/root/email/linklist.html
+++ b/features/changeman/root/email/linklist.html
@@ -8,12 +8,13 @@
     $jobid
     $items => []
     $url
+    $logpase
     $to
 </%args>
 <head>
     <meta http-equiv="Content-Language" content="en" />
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-    <title>Accion</title>
+    <title>Acci&oacute;n</title>
 	<& /email/style.css &>
 </head>
 <style>
@@ -37,7 +38,6 @@ body {
     vertical-align: top;
     }
 </style>
-
 <body>
     <div id="tablaContenedor_div">
         <TABLE cellpadding="0" cellspacing="0" width="100%">
@@ -55,15 +55,15 @@ body {
 
     <table border=1 cellspacing=1 cellpadding="2">
         <tr class="backGroundFilaDatos">
-            <td class="backGroundFilaDatos">El job <% $jobname %> solicitado por el usuario <% $requested_by %> (<% $realname %>) formado por los paquetes Changeman:<br>
+            <td class="backGroundFilaDatos">El pase <b><% $jobname %></b> solicitado por el usuario <b><% $requested_by %> (<% $realname %>)</b> formado por los paquetes Changeman:<br>
             <ul> <li><% join '<li>', @{ $items } %> </ul>
-            <% $reason %>
+            <b><% $reason %></b>
             </td>
         </tr>
     </table>
 
     <p>
-    <a href="<% $url %>">Consulte el log de pase aqu&iacute;.</a>
+    <a href="<% $url %><% $logpase %>">Consulte el log de pase aqu&iacute;.</a>
     </p>
 
     <p>
