project id a mid

--- a/features/sqa/root/email/analysis_ju.html
+++ b/features/sqa/root/email/analysis_ju.html
@@ -35,6 +35,9 @@ body {
 <body> 
 <div id="tablaContenedor_div">
 <TABLE cellpadding="0" cellspacing="0" width="100%">
+    <TR style="height:54px">
+        <TD align="right" colspan="2" nowrap="nowrap" style="background-image:url(img/fondocab_base.gif);" height="54"><img id="form:imagen0" border=0 height=54 src="img/pastillas.gif" />IMAGEN</TD>
+    </TR>
 	<TR height="20">
 		<TD class="backGroundPrimeraFila" nowrap="nowrap" height="14">
 			&nbsp;SCM/SQA
@@ -44,7 +47,6 @@ body {
 </div>
 
 <table border=0 cellspacing=2>
-
 	<tr>
 		<td>
 			<h3><% $message %></h3>
