--- a/root/email/approval.html
+++ b/root/email/approval.html
@@ -1,53 +1,109 @@
 <%args>
-	$rfc => ''
-	$app => ''
-	$items => []
-	$requested_by
-	$realname => ''
-	$requested_to => []
-	$reason => ''
-	$comments => ''
-	$url_approve
-	$url_reject
+$rfc => ''
+$app => ''
+$items => []
+$requested_by
+$realname => ''
+$requested_to => []
+$reason => ''
+$subject => ''
+$comments => ''
+$url_approve
+$url_reject
 </%args>
 <head>
     <meta http-equiv="Content-Language" content="en" />
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-    <title>Accion</title>
+    <title>Acci&oacute;n</title>
 	<& /email/style.css &>
 </head>
+<style>
+body {
+    font-family: arial;
+    font-size: 10pt;
+}
+.backGroundPrimeraFila {
+    font-family: Verdana;
+    font-size: 8pt;
+    font-weight: bold;
+    color: #CCCCCC;
+    background-color: #666666;
+    vertical-align: middle;
+}
+.backGroundFilaLinks {
+    font-family: Verdana;
+    font-size: 8pt;
+    color: #111111;
+    vertical-align: top;
+}
+.backGroundFilaDatos {
+    font-family: Verdana;
+    font-size: 8pt;
+    color: #111111;
+    vertical-align: top;
+}
+:link, :link:hover, :visited, :visited:hover {
+    color: #000;
+}
+</style>
 <body>
-    <div class='box'>
-        <div class="error">
-            <h2>SCM: Aprobacion</h2>
-        </div>
-    </div>
-    <div class='box'>
-        <div class="trace error">
-            <li>Aplicacion: <% $app %>
-            <li>RFC: <% $rfc %>
-            <li><b>Solicitado por:</b> <% $requested_by %> (<% $realname %>)
-            <li><b>Solicitado a:</b>
-				<ul>
-					<li><% join '<li>', @{ $requested_to } %>
-				</ul>
-        </div>
-        <div class="trace error">
-            <p>Por favor, apruebe los elementos:
-            <p><li><% join '<li>', @{ $items } %>
-            <% $reason ? '<p><li>Motivo: ' . $reason : '' %>
-            <% $comments ? '<p><li>Comentarios: ' . $comments : '' %>
-        </div>
-    </div>
+<div id="tablaContenedor_div">
+    <TABLE cellpadding="0" cellspacing="0" width="100%">
+        <TR height="20">
+            <TD class="backGroundPrimeraFila" nowrap="nowrap" height="14">&nbsp;SCM/Baseliner</TD>
+        </TR>
+    </TABLE>
+</div>
 
-    <div class='box'>
-        <div class="name">
-            <p>Haciendo clic en la siguiente url:
-            <p><table><tr><td style='width: 80px; color: black; background-color: #309010'><b>Aprobar:</td><td><a href="<% $url_approve %>"><% $url_approve %></a></td></tr></table>
+<table border=0 cellspacing=2>
+    <tr>
+        <td><br><h3><% $subject %></h3><br></td>
+    </tr>
+</table>
 
-            <p>O rechacelo:
-            <p><table><tr><td style='width: 80px; color: black; background-color: #C03010'><b>Rechazar:</td><td><a href="<% $url_reject %>"><% $url_reject %></a></td></tr></table>
-        </div>
-    </div>
+<table border=0 cellspacing=4 cellpadding=2 width=80%>
+    <td colspan=2><hr></td>
+    <tr>
+        <td class="backGroundFilaDatos" style='width: 16%;'><b>Aplicaci&oacute;n</b></td><td style='width: 64%;'><% $app %></td>
+    </tr>
+    <% $rfc ? '<tr><td class="backGroundFilaDatos" style="width: 16%;"><b>RFC</b></td><td style="width: 64%;">'.$rfc.'</td></tr>' : '' %>
+    <tr>
+        <td class="backGroundFilaDatos" style="width: 16%;"><b>Solicitado por</b></td><td style='width: 64%;'><% $requested_by %> (<% $realname %>)</td>
+    </tr><tr>
+        <td class="backGroundFilaDatos" style="width: 16%;"><b>Solicitado a</b></td><td style='width: 64%;'><li><% join '<li>', @{ $requested_to } %></td>
+    </tr>
+    <% $reason ? '<tr><td class="backGroundFilaDatos" style="width: 16%;"><b>Motivo</b></td><td style="width: 64%;">'.$reason.'</td></tr>' : '' %>
+    <% $comments ? '<tr><td class="backGroundFilaDatos" style="width: 16%;"><b>Comentarios</b></td><td style="width: 64%;">'.$comments.'</td></tr>' : '' %>
+    <tr>
+        <td class="backGroundFilaDatos" style="width: 16%;"><b>Elementos</b></td><td style='width: 64%;'><li><% join '<li>', @{ $items } %></td>
+    </tr>
+</table>
+
+<table border=0 cellspacing=6 width=80%>
+    <tr class="backGroundFilaLinks">
+        <td colspan=2 class="backGroundFilaLinks">
+            <br>
+            <hr>
+            <p>Puede aprobar o rechazar la solicitud haciendo clic en uno de los siguientes enlaces:
+            <br>
+        </td>
+    </tr> <tr>
+        <td style='text-align:center; width:17%; background-color:#ccffcc'><a href="<% $url_approve %>"><b>Aprobar solicitud</b></a></td>
+        <td style='text-align:left; width:60%;' >
+% if (! $ENV{BASELINER_DEBUG} ) {
+<% $url_approve %>
+%}
+        </td>
+    </tr> <tr>
+        <td style='text-align:center; width:17%; background-color:#ffcccc'><a href="<% $url_reject %>"><b>Rechazar solicitud</b></a></td>
+        <td style='text-align: left; width:60%;' >
+% if (! $ENV{BASELINER_DEBUG} ) {
+<% $url_reject %>
+%}
+        </td>
+    </tr>
+</table>
 </body>
+
+
 
