--- a/root/email/approval_manual.html
+++ b/root/email/approval_manual.html
@@ -1,18 +1,20 @@
 <%args>
-	$subject 
-	$requested_by
-	$realname => ''
-	$requested_to => []
-	$reason => '(vacio)'
 	$comments => '(vacio)'
-	$url_approve
-	$url_reject
-	$url_log
 	$jobname 
+	$realname => ''
+	$reason => '(vacio)'
+	$requested_by
+	$requested_to => []
+	$subject 
+	$url_approve
+	$url_log
+	$url_reject
 </%args>
+
 <%init>
     use Baseliner::Utils;
 </%init>
+
 <head>
     <meta http-equiv="Content-Language" content="en" />
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
@@ -20,39 +22,101 @@
 	<& /email/style.css &>
 </head>
 
+<style>
+body {
+    font-family: arial;
+    font-size: 10pt;
+}
+.backGroundPrimeraFila {
+    font-family: Verdana;
+    font-size: 8pt;
+    font-weight: bold;
+    color: #CCCCCC;
+    background-color: #666666;
+    vertical-align: middle;
+}
+.backGroundFilaLinks {
+    font-family: Verdana;
+    font-size: 8pt;
+    color: #111111;
+    vertical-align: top;
+}
+.backGroundFilaDatos {
+    font-family: Verdana;
+    font-size: 8pt;
+    color: #111111;
+    vertical-align: top;
+}
+:link, :link:hover, :visited, :visited:hover {
+    color: #000;
+}
+</style>
+
 <body>
-    <div class='box'>
-        <div class="error">
-            <h2>SCM: <% $subject %></h2>
-        </div>
-    </div>
-    <div class='box'>
-        <div class="trace error">
-            <li><b><% _loc("Requested by") %>: </b> <% $requested_by %> (<% $realname %>)
-            <li><b><% _loc("Requested to") %>: </b>
-				<ul>
-					<li><% join '<li>', @{ $requested_to } %>
-				</ul>
-        </div>
-        <div class="trace error">
-            <p><% _loc("Manual steps for deploying job %1", $jobname) %>
-            <% $reason   ? '<p><li>' . _loc("Reason")   . ': ' . $reason : '' %>
-            <% $comments ? '<p><li>' . _loc("Comments") . ': ' . $comments : '' %>
-        </div>
-    </div>
+<div id="tablaContenedor_div">
+    <TABLE cellpadding="0" cellspacing="0" width="100%">
+        <TR height="20">
+            <TD class="backGroundPrimeraFila" nowrap="nowrap" height="14">&nbsp;SCM/Baseliner</TD>
+        </TR>
+    </TABLE>
+</div>
 
-    <div class='box'>
-        <div class="name">
-            <p><% _loc("Report all relevant information to the job log") %>:
-            <p><table><tr><td style='width: 80px; color: black; background-color: #f1e08f'><b><% _loc("Log") %>:</td><td><a href="<% $url_log %>"><% $url_log %></a></td></tr></table>
-            
-            <p><% _loc("Please, click on the following links") %>:
-            <p><table><tr><td style='width: 80px; color: black; background-color: #80d066'><b><% _loc("Approve") %>:</td><td><a href="<% $url_approve %>"><% $url_approve %></a></td></tr></table>
+<table border=0 cellspacing=2>
+    <tr>
+        <td><br><h3><% $subject %></h3><br></td>
+    </tr>
+</table>
 
-            <p><% _loc("To reject") %>:
-            <p><table><tr><td style='width: 80px; color: black; background-color: #e4a597'><b><% _loc("Reject") %>:</td><td><a href="<% $url_approve %>"><% $url_reject %></a></td></tr></table>
-        </div>
-    </div>
+<table border=0 cellspacing=4 cellpadding=2 width=80%>
+    <td colspan=2><hr></td>
+    <tr>
+        <td colspan=2><b><% _loc("Manual steps for deploying job %1", $jobname) %></b></td>
+    </tr>
+    <tr>
+        <td class="backGroundFilaDatos" style="width: 16%;"><b><% _loc("Requested by") %></b></td><td style='width: 64%;'><% $requested_by %> (<% $realname %>)</td>
+    </tr><tr>
+        <td class="backGroundFilaDatos" style="width: 16%;"><b><% _loc("Requested to") %></b></td><td style='width: 64%;'><li><% join '<li>', @{ $requested_to } %></td>
+    </tr>
+    <% $reason ? '<tr><td class="backGroundFilaDatos" style="width: 16%;"><b>Motivos</b></td><td style="width: 64%;">'.$reason.'</td></tr>' : '' %>
+    <% $comments ? '<tr><td class="backGroundFilaDatos" style="width: 16%;"><b>Comentarios</b></td><td style="width: 64%;">'.$comments.'</td></tr>' : '' %>
+</table>
+
+<table border=0 cellspacing=6 width=80%>
+    <tr class="backGroundFilaLinks">
+        <td colspan=2 class="backGroundFilaLinks">
+            <br>
+            <hr>
+            <p>Puede aprobar o rechazar la solicitud haciendo clic en uno de los siguientes enlaces:
+            <br>
+        </td>
+    </tr> <tr>
+        <td style="white-space: nowrap; text-align:left; width:17%; background-color:#81bef7"><a style="text-align:left;" href="<% $url_log %>"><b>Consultar Log</b></a></td>
+        <td style="white-space: nowrap; text-align:left; width:63%;" >
+% if ($ENV{BASELINER_DEBUG} ) {
+<% $url_log %>
+%}
+        </td>
+    </tr> <tr>
+        <td style="white-space: nowrap; text-align:left; width:17%; background-color:#ffff00"><a style="text-align:left;" href="<% $url_log %>/annotate_now"><b>Realizar anotaci&oacute;n</b></a></td>
+        <td style="white-space: nowrap; text-align:left; width:63%;" >
+% if ($ENV{BASELINER_DEBUG} ) {
+<% $url_log %>/annotate_now
+%}
+        </td>
+    </tr> <tr>
+        <td style="white-space: nowrap; text-align:left; width:17%; background-color:#ccffcc"><a style="text-align:left;" href="<% $url_approve %>"><b>Aprobar solicitud</b></a></td>
+        <td style="white-space: nowrap; text-align:left; width:63%;" >
+% if ($ENV{BASELINER_DEBUG} ) {
+<% $url_approve %>
+%}
+        </td>
+    </tr> <tr>
+        <td style="white-space: nowrap; text-align:left; width:17%; background-color:#ffcccc"><a style="text-align:left;" href="<% $url_reject %>"><b>Rechazar solicitud</b></a></td>
+        <td style="white-space: nowrap; text-align: left; width:63%;" >
+% if ($ENV{BASELINER_DEBUG} ) {
+<% $url_reject %>
+%}
+        </td>
+    </tr>
+</table>
 </body>
-
-
