--- a/root/email/approval_manual.html
+++ b/root/email/approval_manual.html
@@ -68,7 +68,7 @@ body {
 </table>
 
 <table border=0 cellspacing=4 cellpadding=2 width=80%>
-    <td colspan=2><hr></td>
+    <tr><td colspan=2><hr></td></tr>
     <tr>
         <td colspan=2><b><% _loc("Manual steps for deploying job %1", $jobname) %></b></td>
     </tr>
