--- a/root/email/approval_job.html
+++ b/root/email/approval_job.html
@@ -65,7 +65,7 @@ body {
 </table>
 
 <table border=0 cellspacing=4 cellpadding=2 width=80%>
-    <td colspan=2><hr></td>
+    <tr><td colspan=2><hr></td></tr>
     <tr>
         <td class="backGroundFilaDatos" style="width: 16%;"><b>Solicitado por</b></td><td style='width: 64%;'><% $requested_by %> (<% $realname %>)</td>
     </tr><tr>
