--- a/root/email/job.html
+++ b/root/email/job.html
@@ -1,11 +1,12 @@
 <%args>
 	$action
 	$job
+	$message
+	$realname
 	$status
 	$subject 
-	$message
+	$to 
 	$username
-	$realname
 </%args>
 <head>
     <meta http-equiv="Content-Language" content="en" />
@@ -14,17 +15,68 @@
 	<& /email/style.css &>
 </head>
 
+<style>
+body {
+    font-family: arial;
+    font-size: 10pt;
+}
+.backGroundPrimeraFila {
+    font-family: Verdana;
+    font-size: 8pt;
+    font-weight: bold;
+    color: #CCCCCC;
+    background-color: #666666;
+    vertical-align: middle;
+}
+.backGroundFilaLinks {
+    font-family: Verdana;
+    font-size: 8pt;
+    color: #111111;
+    vertical-align: top;
+}
+.backGroundFilaDatos {
+    font-family: Verdana;
+    font-size: 8pt;
+    color: #111111;
+    vertical-align: top;
+}
+:link, :link:hover, :visited, :visited:hover {
+    color: #000;
+}
+</style>
+
 <body>
-    <div class='box'>
-        <div class="error">
-            <h2>SCM: <% $subject %></h2>
-        </div>
-    </div>
-    <div class='box'>
-        <div class="trace error">
-            <p>Usuario propietario del pase: <b><% "$username ($realname)" %></b></p>
-            <p>Ultimo Mensaje de pase: <b><% $message || '<i>no disponible</i>' %></b></p>
-        </div>
-    </div>
+<div id="tablaContenedor_div">
+    <TABLE cellpadding="0" cellspacing="0" width="100%">
+        <TR height="20">
+            <TD class="backGroundPrimeraFila" nowrap="nowrap" height="14">&nbsp;SCM/Baseliner</TD>
+        </TR>
+    </TABLE>
+</div>
+
+<table border=0 cellspacing=2>
+    <tr>
+        <td><br><h3><% $subject %></h3><br></td>
+    </tr>
+</table>
+
+<table border=0 cellspacing=4 cellpadding=2 width=80%>
+    <td colspan=2><hr></td>
+    <tr>
+        <td colspan=2><b><% _loc("Manual steps for deploying job %1", $jobname) %></b></td>
+    </tr>
+    <tr>
+        <td class="backGroundFilaDatos" style="width: 16%;"><b>Usuario propietario del pase:</b></td><td style='width: 64%;'><% $username %> (<% $realname %>)</td>
+    </tr><tr>
+        <td class="backGroundFilaDatos" style="width: 16%;"><b>Ultimo Mensaje de pase: </b></td><td style='width: 64%;'><% $message || '<i>no disponible</i>' %></td>
+    </tr>
+</table>
+
+<p>
+% if ( $ENV{BASELINER_DEBUG} ) {
+Enviado a: <% join ",",@$to %>
+%}
+</p>
+
 </body>
 
