--- a/root/email/approval_manual.html
+++ b/root/email/approval_manual.html
@@ -97,7 +97,7 @@ body {
 %}
         </td>
     </tr> <tr>
-        <td style="white-space: nowrap; text-align:left; width:17%; background-color:#ffff00"><a style="text-align:left;" href="<% $url_log %>/annotate_now"><b>Realizar anotaci&oacute;n</b></a></td>
+        <td style="white-space: nowrap; text-align:left; width:17%; background-color:#ffff00"><a style="text-align:left;" href="<% $url_log %>&annotate_now=1"><b>Realizar anotaci&oacute;n</b></a></td>
         <td style="white-space: nowrap; text-align:left; width:63%;" >
 % if ($ENV{BASELINER_DEBUG} ) {
 <% $url_log %>/annotate_now
