--- a/root/email/approval_job.html
+++ b/root/email/approval_job.html
@@ -91,7 +91,7 @@ body {
 %}
         </td>
     </tr> <tr>
-        <td style="text-align:left; width:17%; background-color:#ffff00"><a style="text-align:left;" href="<% $url_log %>/annotate_now"><b>Realizar anotaci&oacute;n</b></a></td>
+        <td style="text-align:left; width:17%; background-color:#ffff00"><a style="text-align:left;" href="<% $url_log %>&annotate_now=1"><b>Realizar anotaci&oacute;n</b></a></td>
         <td style="text-align:left; width:60%;" >
 % if ($ENV{BASELINER_DEBUG} ) {
 <% $url_log %>/annotate_now
