add urllog to mail

--- a/features/changeman/root/email/linklist.html
+++ b/features/changeman/root/email/linklist.html
@@ -1,14 +1,13 @@
 <%args>
+    $items => []
+    $jobname
+    $jobid
     $subject
     $requested_by
     $realname => ''
     $requested_to => []
     $reason => '(vacio)'
-    $jobname
-    $jobid
-    $items => []
-    $url
-    $logpase
+    $url_log
     $to
 </%args>
 <head>
