job.html nowrap

--- a/root/email/job.html
+++ b/root/email/job.html
@@ -64,9 +64,9 @@ body {
 <table border=0 cellspacing=4 cellpadding=2 width=80%>
     <td colspan=2><hr></td>
     <tr>
-        <td class="backGroundFilaDatos" style="width: 16%;"><b>Usuario propietario del pase:</b></td><td style='width: 64%;'><% $username %> (<% $realname %>)</td>
+        <td class="backGroundFilaDatos" style="white-space: nowrap; width: 16%;"><b>Usuario propietario del pase:</b></td><td style='width: 64%;'><% $username %> (<% $realname %>)</td>
     </tr><tr>
-        <td class="backGroundFilaDatos" style="width: 16%;"><b>Ultimo Mensaje de pase: </b></td><td style='width: 64%;'><% $message || '<i>no disponible</i>' %></td>
+        <td class="backGroundFilaDatos" style="white-space: nowrap; width: 16%;"><b>Ultimo Mensaje de pase: </b></td><td style='width: 64%;'><% $message || '<i>no disponible</i>' %></td>
     </tr>
 </table>
 
