--- a/root/site/top.html
+++ b/root/site/top.html
@@ -41,6 +41,10 @@
     <script type="text/javascript" src="/static/ext/ext-all<% $debug %>.js"></script>
     <!-- script type="text/javascript" src="/static/ext/jitx<% $debug %>.js"></script -->
 
+    <!-- ux -->
+    <link rel="stylesheet" type="text/css" href="/static/ext/examples/ux/css/ux-all.css" />
+    <script type="text/javascript" src="/static/ext/examples/ux/ux-all<% $debug %>.js"></script>
+
     <!-- <script type="text/javascript" src="/static/ext/build/locale/ext-lang-es-min.js"></script> -->
     <script type="text/javascript" src="/static/ext/src/locale/ext-lang-es.js"></script>
 
