--- a/root/comp/log.html
+++ b/root/comp/log.html
@@ -12,14 +12,14 @@
 <%perl>
     my $url_build = sub {
         my %p = @_;
-        $p{debug} ||= 0;
-        $p{with_data} ||= 0;
-        $p{sort} ||= 'id asc';
+        $p{with_data} and $p{with_data} = ! $with_data;
+        $p{debug} and $p{debug} = ! $debug;
+        $p{sort} = $p{sort} eq 'id desc' ? 'id desc' : '';
         $p{job_exec} ||= $job_exec;
         delete $p{job_exec} if $p{job_exec} < 0 ;  
         return "/job/log/html/${job_key}?" . join '&', 
             map { $_ . '=' . $p{$_} } 
-            keys %p 
+            sort keys %p 
     };
 </%perl>
 
@@ -39,7 +39,8 @@
         td { font-size: '8pt' }
         pre {
             font-family: Consolas, Monaco, "Courier New", Courier, monospace;
-            margin-left: 10px;
+            padding: 6px;
+            border: #ddd dashed 1px;
             font-size: "11px";
         }
         .data {
@@ -79,7 +80,7 @@
 % }
 |
 % if( $with_data ) {
-    <a href="<% $url_build->() %>"><% _loc("No Data") %></a>
+    <a href="<% $url_build->() %>"><% _loc("Hide Data") %></a>
 % } else {
     <a href="<% $url_build->( with_data=>1 ) %>"><% _loc("View Data") %></a>
 % }
