--- a/root/comp/log.html
+++ b/root/comp/log.html
@@ -12,9 +12,9 @@
 <%perl>
     my $url_build = sub {
         my %p = @_;
-        $p{with_data} and $p{with_data} = ! $with_data;
-        $p{debug} and $p{debug} = ! $debug;
-        $p{sort} = $p{sort} eq 'id desc' ? 'id desc' : '';
+        $p{with_data} //= $with_data;
+        $p{debug} //=  $debug;
+        $p{sort} //= $sort;
         $p{job_exec} ||= $job_exec;
         delete $p{job_exec} if $p{job_exec} < 0 ;  
         return "/job/log/html/${job_key}?" . join '&', 
@@ -67,20 +67,20 @@
 <center>
 <div id="top">
 % if( $debug ) {
-    <a href="<% $url_build->() %>">No Debug</a>
+    <a href="<% $url_build->( debug=>0 ) %>">No Debug</a>
 % } else {
     <a href="<% $url_build->( debug=>1 ) %>">Debug</a>
 % }
 |
 <% _loc("Sort") %>:
 % if( $sort ) {
-    <a href="<% $url_build->() %>"><% _loc("Chronological") %></a>
+    <a href="<% $url_build->( sort=>'' ) %>"><% _loc("Chronological") %></a>
 % } else {
     <a href="<% $url_build->( sort=>'id desc' ) %>"><% _loc("Reverse") %></a>
 % }
 |
 % if( $with_data ) {
-    <a href="<% $url_build->() %>"><% _loc("Hide Data") %></a>
+    <a href="<% $url_build->( with_data => 0 ) %>"><% _loc("Hide Data") %></a>
 % } else {
     <a href="<% $url_build->( with_data=>1 ) %>"><% _loc("View Data") %></a>
 % }
