--- a/root/site/header.html
+++ b/root/site/header.html
@@ -29,7 +29,10 @@
     <script src="/static/flot/jquery.flot.resize.js"></script>
     <script src="/static/flot/flot.js"></script>
 
-
+    <!-- JSGantt -->
+    <link rel="stylesheet" type="text/css" href="/static/jsgantt.css" />
+    <script language="javascript" src="/static/jsgantt.js"></script>
+    
     <!-- CodeMirror -->
     <link rel="stylesheet" href="/static/codemirror/lib/codemirror.css">
     <link rel="stylesheet" href="/static/codemirror/theme/elegant.css">
