--- a/root/comp/dashboard.html
+++ b/root/comp/dashboard.html
@@ -28,6 +28,7 @@
         <div class="grid_10" style="margin-bottom: 5px;">
 % if($dashboardlets){        
 % for my $dash ( sort { $a->{order} <=> $b->{order} } _array $dashboardlets ) {
+% _error $dash;
 % if ($dash->{order} % 2 != 0){
     <& $dash->{html} &>
 % }}
